fix blog images on safari

--- a/lmisite/main_site/static/main_site/style/design_insider.scss
+++ b/lmisite/main_site/static/main_site/style/design_insider.scss
@@ -409,7 +409,8 @@ h2, h3 {
 
         img {
           object-fit: cover;
-          min-height: 100%;
+          height: 100%;
+          width: 100%;
         }
       }
     }
